2020-03-05         [RELEASE] Release of filefill 3.0.3 (Nicole Cordes)
2020-03-05 2e4c06f [BUGFIX] Enforce lower file extension for comparison (Nicole Cordes)

2020-02-26         [RELEASE] Release of filefill 3.0.2 (Nicole Cordes)
2020-02-26 17c557d [BUGFIX] Use correct identifier canonicalization (Nicole Cordes)
2020-01-20 964c455 Add a better example (Harry Glatz)
2020-01-17 7f7dcd0 Remove duplicate entry in example (Harry Glatz)

2019-08-29         [RELEASE] Release of filefill 3.0.1 (Nicole Cordes)
2019-08-29 9e773f5 [BUGFIX] Do not try to download files not present in sys_file (Helmut Hummel)

2019-08-20         [RELEASE] Release of filefill 3.0.0 (Nicole Cordes)
2019-08-20 b62a18c [TASK] Update supporting files to EXT:my_skeleton 0.2.1 (Nicole Cordes)
2019-08-20 6bc9c0a [TASK] Update README.md (Nicole Cordes)
2019-04-28 a1eae59 [FEATURE] Allow global reprocessing of existing ProcessedFile (Nicole Cordes)
2019-04-28 25b5d27 [TASK] Streamline PlaceholderResource (Nicole Cordes)
2019-04-28 ed65f5f [BUGFIX] Remove deprecated argument in GeneralUtility::mkdir_deep (Nicole Cordes)
2019-04-28 96dd0d5 [FEATURE] Adjust existing resource handler to new configuration (Nicole Cordes)
2019-04-28 d95218c [FEATURE] Move resource configuration to $TYPO3_CONF_VARS (Nicole Cordes)
2019-04-28 e276780 [TASK] Raise extension version to 3.x (Nicole Cordes)

2018-10-29         [RELEASE] Release of filefill 2.0.1 (Nicole Cordes)
2018-10-29 6757ce6 [BUGFIX] Always enforce case sensitive file system (Nicole Cordes)

2018-10-03         [RELEASE] Release of filefill 2.0.0 (Nicole Cordes)
2018-10-03 954bc67 [TASK] Raise TYPO3 dependencies to include 9.5 (Nicole Cordes)
2018-10-03 f681f13 [TASK] Update supporting files to EXT:my_skeleton 0.1.5 (Nicole Cordes)
2018-10-03 53b6dac [FEATURE] Add support for ImageViewHelper "src" usages (Nicole Cordes)
2018-09-12 4673710 [BUGFIX] Throw dedicated exceptions (Nicole Cordes)
2018-09-12 b672e6a [BUGFIX] Comment intended fallthrough (Nicole Cordes)